--- a/index.html
+++ b/index.html
@@ -1,5 +1,38 @@
-<html>
-    
-    <iframe src="https://nanafisante.notion.site/ebd/1b7ad368d224808bad1df12b4d46753e" width="100%" height="2000" frameborder="0" allowfullscreen />
-    
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nana's Website</title>
+    <style>
+        body, html {
+            margin: 0; /* Remove default body margins */
+            padding: 0;
+            height: 100%; /* Make body and html take full height */
+            overflow: hidden;
+        }
+
+        .responsive-iframe-container {
+            position: relative;
+            overflow: hidden;
+            width: 100%;
+            padding-top: 56.25%; /* 16:9 Aspect Ratio (adjust if needed) */
+            height: 100%;
+        }
+
+        .responsive-iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: 0; /* Remove default iframe border */
+        }
+    </style>
+</head>
+<body>
+    <div class="responsive-iframe-container">
+        <iframe class="responsive-iframe" src="https://nanafisante.notion.site/ebd/1b7ad368d224808bad1df12b4d46753e"  allowfullscreen></iframe>
+    </div>
+</body>
 </html>
