Add two-way link for Threads bio verification

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nana's Website</title>
+    <link rel="me" href="https://www.threads.net/@nana.fisante">
+
     <style>
         body, html {
             margin: 0; /* Remove default body margins */
